# R52_coding_agent

./: .env.example  .gitignore  README.md  cli.py  eval_suite.yaml  example_feature.md  pyproject.toml  r52_types.py  sitecustomize.py
agent/: __init__.py  graph.py  probe_tools.py  state.py
agent/nodes/: __init__.py  builder.py  diagnoser.py  generator.py  patcher.py  planner.py  reviewer.py  runner.py  scout.py  validator.py
agent/prompts/: __init__.py  system_r52.py
backends/: __init__.py  anthropic_api.py  base.py  claude_cli.py  codex_cli.py  gemini_cli.py  openai_api.py  openrouter_api.py
context/: __init__.py  repo_reader.py
eval/: __init__.py  harness.py
observability/: __init__.py  logger.py  rich_ui.py  tracer.py
templates/: __init__.py
templates/cortex-r52-baremetal/: Makefile  link.ld  main.c  startup.s  template.yaml  uart.c  uart.h
toolchain/: __init__.py  armclang.py  build_system.py  config.py  gnu.py  simulator.py
