[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r52-agent"
version = "0.1.0"
description = "Autonomous ARM Cortex-R52 coding agent with build/run/validate feedback loop"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1",
    "langchain-anthropic>=1.3",
    "langchain-openai>=1.1",
    "anthropic>=0.84",
    "openai>=2.0",
    "instructor>=1.14",
    "pydantic>=2.12",
    "rich>=14.0",
    "click>=8.3",
    "questionary>=2.1",
    "python-dotenv>=1.2",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "opentelemetry-sdk>=1.40",
    "opentelemetry-api>=1.40",
    "pyyaml>=6.0",
]

[project.scripts]
r52 = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent", "backends", "toolchain", "context", "observability", "eval"]
